@@ -10,10 +10,8 @@ package views.KeyWordBoardScreen;
  */
 
 
-import connector.KeyWordConnector;
-import connector.RedditPostConnector;
-import controller.ListOfKeyWords;
-import controller.ListOfRedditPosts;
+import controller.listController.ListOfKeyWords;
+import controller.listController.ListOfRedditPosts;
 import models.KeyWord;
 import models.RedditPost;
 import views.CollectionBoardScreen.CollectionScreen;
@@ -166,7 +164,7 @@ public class KeyWordScreen extends javax.swing.JFrame {
 
                 },
                 new String [] {
-                        "Key word", "React", "Number of posts"
+                        "Key word", "Number of reacts", "Number of posts"
                 }
         ) {
             boolean[] canEdit = new boolean [] {
@@ -208,9 +206,9 @@ public class KeyWordScreen extends javax.swing.JFrame {
             }
         });
 
-        cbTangDan.setModel(new javax.swing.DefaultComboBoxModel<>(new String[] { "Tăng dần theo ngày", "Giảm dần theo ngày", " " }));
+        cbTangDan.setModel(new javax.swing.DefaultComboBoxModel<>(new String[] { "Tăng dần theo ngày", "Giảm dần theo ngày", "Tăng dần theo tháng", "Giảm dần theo tháng", "Tăng dần theo năm", "Giảm dần theo năm" }));
 
-        cbReactBy.setModel(new javax.swing.DefaultComboBoxModel<>(new String[] { "Reacts by day", "Reacts by month", "Reacts by year", " ", " " }));
+        cbReactBy.setModel(new javax.swing.DefaultComboBoxModel<>(new String[] { "Reacts theo ngày", "Reacts theo tháng", "Reacts theo năm" }));
 
         javax.swing.GroupLayout nhanKhauPanelLayout = new javax.swing.GroupLayout(nhanKhauPanel);
         nhanKhauPanel.setLayout(nhanKhauPanelLayout);
@@ -283,7 +281,7 @@ public class KeyWordScreen extends javax.swing.JFrame {
         DefaultTableModel model = (DefaultTableModel)tKeyWord.getModel();
         int indexRow = tKeyWord.getSelectedRow();
         key = String.valueOf(model.getValueAt(indexRow, 0).toString());
-        KeyWord keyWord = keyWordList.getKeyWord(key).getFirst();
+        KeyWord keyWord = keyWordList.getKeyWord(key).get(0);
 //        System.out.println(this.key);
         RedditPostLogScreen newLogScreen = new RedditPostLogScreen(keyWord);
         newLogScreen.setVisible(true);
@@ -300,11 +298,11 @@ public class KeyWordScreen extends javax.swing.JFrame {
         List<KeyWord> keyWords = keyWordList.getKeyWord(ten);
         String firstItem = cbTangDan.getSelectedItem().toString();
         int index = 0;
-        if(cbReactBy.getSelectedItem().toString().equals("Reacts by day")) {
+        if(cbReactBy.getSelectedItem().toString().equals("Reacts theo ngày")) {
             index = 0;
-        } else if(cbReactBy.getSelectedItem().toString().equals("Reacts by month")){
+        } else if(cbReactBy.getSelectedItem().toString().equals("Reacts theo tháng")){
             index = 1;
-        } else if(cbReactBy.getSelectedItem().toString().equals("Reacts by year")) {
+        } else if(cbReactBy.getSelectedItem().toString().equals("Reacts theo năm")) {
             index = 2;
         }
         DefaultTableModel defaultTableModel = (DefaultTableModel) tKeyWord.getModel();
@@ -347,37 +345,7 @@ public class KeyWordScreen extends javax.swing.JFrame {
 
     private void btnSapXepMouseClicked(java.awt.event.MouseEvent evt) {
         // TODO add your handling code here:
-        this.currentKeyWordList = keyWordList;
-
-        String firstItem = cbTangDan.getSelectedItem().toString();
-        int index = 0;
-        if(cbReactBy.getSelectedItem().toString().equals("Reacts by day")) {
-            index = 0;
-        } else if(cbReactBy.getSelectedItem().toString().equals("Reacts by month")){
-            index = 1;
-        } else if(cbReactBy.getSelectedItem().toString().equals("Reacts by year")) {
-            index = 2;
-        }
-        DefaultTableModel defaultTableModel = (DefaultTableModel) tKeyWord.getModel();
-        defaultTableModel.getDataVector().removeAllElements();
-        defaultTableModel.fireTableDataChanged();
-        if (firstItem.equals("Tăng dần theo ngày")){
-            currentKeyWordList.sortKeyWordByReactInDayIncreasing();
-            for(KeyWord keyWord: currentKeyWordList.getKeyWordList()) {
-                List<RedditPost> redditPostListByKeyWord = redditPostList.getRedditPostByKeyWord(keyWord.getWord());
-                String data[] = {keyWord.getWord(), String.valueOf(keyWord.getReact()[index]), String.valueOf(redditPostListByKeyWord.size())};
-                defaultTableModel = (DefaultTableModel) tKeyWord.getModel();
-                defaultTableModel.addRow(data);
-            }
-        } else if (firstItem.equals("Giảm dần theo ngày")) {
-            currentKeyWordList.sortKeyWordByReactInDayDecreasing();
-            for(KeyWord keyWord: currentKeyWordList.getKeyWordList()) {
-                List<RedditPost> redditPostListByKeyWord = redditPostList.getRedditPostByKeyWord(keyWord.getWord());
-                String data[] = {keyWord.getWord(), String.valueOf(keyWord.getReact()[index]), String.valueOf(redditPostListByKeyWord.size())};
-                defaultTableModel = (DefaultTableModel) tKeyWord.getModel();
-                defaultTableModel.addRow(data);
-            }
-        }
+        display();
     }
 
     private void btnSapXepActionPerformed(java.awt.event.ActionEvent evt) {
@@ -385,32 +353,40 @@ public class KeyWordScreen extends javax.swing.JFrame {
     }
 
     // ------------ START TO CODE HERE -----------------
-    // ------------- User parameter --------------------
-    // ------------- CONNECTION SQL PARAMETER---------------
-
-    // ------------- DISPLAY PEOPLE ---------------------
+    // ------------- DISPLAY ---------------------
     private void display(){
         this.currentKeyWordList = keyWordList;
 
+        String firstItem = cbTangDan.getSelectedItem().toString();
         int index = 0;
-        if(cbReactBy.getSelectedItem().toString().equals("Reacts by day")) {
+        if(cbReactBy.getSelectedItem().toString().equals("Reacts theo ngày")) {
             index = 0;
-        } else if(cbReactBy.getSelectedItem().toString().equals("Reacts by month")){
+        } else if(cbReactBy.getSelectedItem().toString().equals("Reacts theo tháng")){
             index = 1;
-        } else if(cbReactBy.getSelectedItem().toString().equals("Reacts by year")) {
+        } else if(cbReactBy.getSelectedItem().toString().equals("Reacts theo năm")) {
             index = 2;
         }
-        currentKeyWordList.sortKeyWordByReactInDayIncreasing();
         DefaultTableModel defaultTableModel = (DefaultTableModel) tKeyWord.getModel();
         defaultTableModel.getDataVector().removeAllElements();
         defaultTableModel.fireTableDataChanged();
-        System.out.println(index);
-        for(KeyWord keyWord: currentKeyWordList.getKeyWordList()){
+        if (firstItem.equals("Tăng dần theo ngày")){
+            currentKeyWordList.sortKeyWordByReactInDayIncreasing();
+        } else if (firstItem.equals("Giảm dần theo ngày")) {
+            currentKeyWordList.sortKeyWordByReactInDayDecreasing();
+        } else if (firstItem.equals("Tăng dần theo tháng")) {
+            currentKeyWordList.sortKeyWordByReactInMonthIncreasing();
+        } else if (firstItem.equals("Giảm dần theo tháng")) {
+            currentKeyWordList.sortKeyWordByReactInMonthDecreasing();
+        } else if (firstItem.equals("Tăng dần theo năm")) {
+            currentKeyWordList.sortKeyWordByReactInYearIncreasing();
+        } else if (firstItem.equals("Giảm dần theo năm")) {
+            currentKeyWordList.sortKeyWordByReactInYearDecreasing();
+        }
+        for(KeyWord keyWord: currentKeyWordList.getKeyWordList()) {
             List<RedditPost> redditPostListByKeyWord = redditPostList.getRedditPostByKeyWord(keyWord.getWord());
             String data[] = {keyWord.getWord(), String.valueOf(keyWord.getReact()[index]), String.valueOf(redditPostListByKeyWord.size())};
             defaultTableModel = (DefaultTableModel) tKeyWord.getModel();
             defaultTableModel.addRow(data);
-//            System.out.println(data[0]);
         }
     }
 
@@ -443,14 +419,6 @@ public class KeyWordScreen extends javax.swing.JFrame {
         } catch (javax.swing.UnsupportedLookAndFeelException ex) {
             java.util.logging.Logger.getLogger(KeyWordScreen.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
         }
-        //</editor-fold>
-        //</editor-fold>
-        //</editor-fold>
-        //</editor-fold>
-        //</editor-fold>
-        //</editor-fold>
-        //</editor-fold>
-        //</editor-fold>
 
         /* Create and display the form */
         java.awt.EventQueue.invokeLater(new Runnable() {
